# chemapps

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile.unix  Makefile.win  README.md  ThirdPartyNotices.txt  appveyor.yml  azure-pipelines.yml  boiler.txt  chemapps.cfg  configure.py
chem/: CMakeLists.txt  argparse.cpp  argparse.d  argparse.h  arma_io.h  collision.cpp  collision.h  conformer.h  constants.cpp  constants.d  constants.h  datum.cpp  datum.h  element.h  gauss_data.cpp  gaussian.cpp  gaussian.h  imom_tor.cpp  imom_tor.h  input.cpp  input.d  input.h  math.cpp  math.d  math.h  mcmm.cpp  mcmm.h  mol_formula.h  molecule.cpp  molecule.d  molecule.h  molecule_io.cpp  molecule_io.d  molecule_io.h  molrot.cpp  molrot.d  molrot.h  molvib.cpp  molvib.h  mopac.cpp  (+18 more)
cmake/: FindMKL.cmake  FindNumlib.cmake  FindOpenBLAS.cmake  FindStdutils.cmake
examples/cambi/: ar_ch4.inp  ar_h2o.inp  he_h2o.inp  he_ne.inp  kr_h2o.inp  ne_ar.inp
examples/caprate/: h2o.inp  h2o2.inp  ho2.inp
include/chem/: collision.h  conformer.h  electronic.h  element.h  energy_levels.h  gamcs.h  gamss.h  gauss_data.h  gauss_error.h  gaussian.h  geometry.h  io.h  ising.h  mcmm.h  mol_type.h  molecule.h  molecule_io.h  molrot.h  molvib.h  mopac.h  periodic_table.h  ptable.h  rotation.h  statecount.h  thermochem.h  thermodata.h  torsion.h  traits.h  troe.h  tst.h  tunnel.h  units.h  vibration.h  whirab.h  whitten_rabino.h  zmatrix.h
include/chem/impl/: elec_state.h  geometry.h  io_support.h  molecule_io.h  rotation.h  torsion.h  vibration.h
lib/: CMakeLists.txt  collision.cpp  elec_state.cpp  electronic.cpp  energy_levels.cpp  gamcs.cpp  gamss.cpp  gauss_data.cpp  gaussian.cpp  geometry.cpp  io.cpp  io_support.cpp  ising.cpp  mcmm.cpp  molecule.cpp  molecule_io.cpp  molrot.cpp  molvib.cpp  mopac.cpp  periodic_table.cpp  ptable.cpp  rotation.cpp  statecount.cpp  thermochem.cpp  thermodata.cpp  torsion.cpp  troe.cpp  tst.cpp  tunnel.cpp  units.cpp  vibration.cpp  whirab.cpp  whitten_rabino.cpp  zmatrix.cpp
pipelines/: jobs-linux.yml  jobs-macos.yml  jobs-windows.yml
scripts/: constants.py  constants.txt  element.py  elements.txt  ptable.py
src/: CMakeLists.txt  Makefile.unix  brw.cpp  cambi.cpp  caprate.cpp  cartoxyz.cpp  fchkgztoxyz.cpp  fchktoxyz.cpp  gamcs.cpp  gamss.cpp  gausscan.cpp  gausscp.cpp  gaussfreq.cpp  gausshess.cpp  gausshess2.cpp  gaussnmr.cpp  gaussopt.cpp  gausstodal.cpp  gausstopoly.cpp  gmsget.cpp  gmsgetxyz.cpp  gmsscan.cpp  ising.cpp  mcmm.cpp  mcmmtocom.cpp  mcmmtoxyz.cpp  mergeirc.cpp  mh2ph.cpp  molrot.cpp  molvib.cpp  moptonw.cpp  moptoxyz.cpp  nejconv.cpp  nejeff.cpp  nmravg.cpp  nwget.cpp  nwgetxyz.cpp  nwzmap.cpp  polyplot.cpp  sortirc.cpp  (+10 more)
tests/: CMakeLists.txt  Makefile.unix  run.sh  test.cpp  test_ch2clch2cl.inp  test_ch3oh.inp  test_ch4oh.inp  test_co2.inp  test_collision.cpp  test_collision_azulene_ne_90a.inp  test_collision_c3h7br_ne.inp  test_collision_c3h7br_ne_84.inp  test_collision_c3h7br_ne_90a.inp  test_constants.cpp  test_datum.cpp  test_gauss_data.cpp  test_gauss_data_h2o.inp  test_gaussnmr.cpp  test_gaussnmr.inp  test_h2o.inp  test_h2o_ar.inp  test_input.cpp  test_input.inp  test_math.cpp  test_mcmm.cpp  test_mcmm.inp  test_molecule.cpp  test_molecule.inp  test_molecule_io.cpp  test_molecule_io.inp  test_molrot.cpp  test_molrot.inp  test_molvib.cpp  test_molvib.inp  test_molvib_ch4oh.inp  test_molvib_co2.inp  test_molvib_h2o.inp  test_mopac.cpp  test_mopac.inp  test_pdist_matrix.cpp  (+26 more)
